syntax = "proto3";

package vorpal.registry.v0;

option go_package = "github.com/ALT-F4-LLC/vorpal/sdk/go/api/v0/registry";

import "v0/config/config.proto";

service RegistryService {
    rpc GetArchive(RegistryPullRequest) returns (RegistryGetResponse);
    rpc GetConfigArtifact(vorpal.config.v0.ConfigArtifactRequest) returns (vorpal.config.v0.ConfigArtifact);
    rpc PullArchive(RegistryPullRequest) returns (stream RegistryPullResponse);
    rpc PushArchive(stream RegistryPushRequest) returns (RegistryPushResponse);
    rpc PutConfigArtifact(vorpal.config.v0.ConfigArtifact) returns (RegistryPutResponse);
}

enum RegistryArchive {
    UNKNOWN_ARCHIVE = 0;
    ARTIFACT = 1;
    ARTIFACT_SOURCE = 2;
}

message RegistryPullRequest {
    RegistryArchive archive = 1;
    string hash = 2;
}

message RegistryPullResponse {
    bytes data = 1;
}

message RegistryPushRequest {
    RegistryArchive archive = 1;
    bytes data = 2;
    bytes signature = 3;
    string hash = 4;
}

message RegistryGetResponse {}

message RegistryPushResponse {}

message RegistryPutResponse {}
